--- a/hashlips_nft_minting_dapp-1.0.1/public/manifest.json
+++ b/hashlips_nft_minting_dapp-1.0.1/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "NCC",
-  "name": "Coder Clone NFT",
+  "short_name": "UB",
+  "name": "Unbalance Block NFT",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,12 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "logo.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "logo.png",
       "type": "image/png",
       "sizes": "512x512"
     }
